batch-rename: show error on empty name

When the destination name is empty, the "Rename" button goes
insensitive without explaining the user why it happened.

To explain what happened show a descriptive message to inform
the user.

https://bugzilla.gnome.org/show_bug.cgi?id=772435